# micromouse_yabai

./: .gitignore  LICENSE
app/: .gitignore
app/MicroMouseDashboard/: AppConstants.swift  BluetoothManager.swift  ContentView.swift  MicroMouseDashboardApp.swift  MicroMouseManager.swift  Utilities.swift
app/MicroMouseDashboard.xcodeproj/: project.pbxproj
app/MicroMouseDashboard/Assets.xcassets/: AppIcon.afdesign
app/MicroMouseDashboard/Assets.xcassets/AppIcon.appiconset/: Contents.json
app/MicroMouseDashboard/Platform/macOS/: AppDelegate.swift
app/MicroMouseDashboard/Views/: BluetoothDisabledPage.swift  BluetoothDisabledView.swift  ConnectionStatusPage.swift  ContentView.swift  DrivePage.swift  ErrorInfoPage.swift  ErrorInfoView.swift  IMUPage.swift  MainPage.swift  MainView.swift  MazePage.swift  MazeView.swift  MusicPage.swift  MusicView.swift  NavigationView.swift  NotReadyView.swift  SettingsPage.swift  SettingsView.swift  VisionPage.swift  VisionView.swift
app/MicroMouseDashboardTests/: MicroMouseDashboardTests.swift
app/MicroMouseDashboardUITests/: MicroMouseDashboardUITests.swift  MicroMouseDashboardUITestsLaunchTests.swift
firmware/: .clang-format  .gitignore  CMakeLists.txt  micromouse.ioc
firmware/Core/Inc/: FreeRTOSConfig.h  app_conf.h  hw_conf.h  main.h  stm32wbxx_hal_conf.h  stm32wbxx_it.h
firmware/Core/Inc/Basic/: constants.hpp  error_manager.h  error_manager.hpp  robot.h  robot.hpp  singleton.hpp  subsystem.hpp
firmware/Core/Inc/Buzzer/: buzzer.h  buzzer.hpp  notes.hpp
firmware/Core/Inc/Control/: robot_control.h  robot_control.hpp
firmware/Core/Inc/Drive/: drive.h  drive.hpp  drive_controller.hpp  encoder.hpp  imu.hpp  odometry.hpp  speed_config.hpp  trajectory.hpp
firmware/Core/Inc/Drive/Controller/: continuous_controller.hpp  controller.hpp  incremental_controller.hpp
firmware/Core/Inc/Math/: math.hpp  pid_controller.hpp
firmware/Core/Inc/Navigation/: navigator.hpp  search_navigator.hpp
firmware/Core/Inc/Utilities/: math.hpp  timer.hpp
firmware/Core/Inc/Vision/: vision.hpp
firmware/Core/Src/: app_entry.c  main.c  stm32wbxx_hal_msp.c  stm32wbxx_it.c
firmware/Core/Src/Basic/: error_manager.cpp  robot.cpp
firmware/Core/Src/Buzzer/: buzzer.cpp  songs.cpp
firmware/Core/Src/Control/: robot_control.cpp
firmware/Core/Src/Drive/: drive.cpp  drive_controller.cpp  encoder.cpp  imu.cpp  odometry.cpp  trajectory.cpp
firmware/Core/Src/Drive/Controller/: continuous_controller.cpp  incremental_controller.cpp
firmware/Core/Src/Math/: pid_controller.cpp
firmware/Core/Src/Navigation/: navigator.cpp  search_navigator.cpp
firmware/Core/Src/Utilities/: timer.cpp
firmware/Core/Src/Vision/: vision.cpp
firmware/NavigationLib/: CMakeLists.txt
firmware/NavigationLib/Inc/Basic/: constants.hpp
firmware/NavigationLib/Inc/Drive/: pose.hpp
firmware/NavigationLib/Inc/DriveTools/: motion.hpp  odometry.hpp  pid_controller.hpp  pose.hpp  trapezoid_profile.hpp
firmware/NavigationLib/Inc/Maze/: cell.hpp  constants.hpp  coordinate.hpp  direction.hpp  maze.hpp
firmware/NavigationLib/Inc/Navigation/: search_navigator.hpp
firmware/NavigationLib/Inc/Solver/: flood_fill.hpp  solver.hpp
firmware/NavigationLib/Src/Drive/: odometry.cpp
firmware/NavigationLib/Src/DriveTools/: odometry.cpp  pid_controller.cpp  trapezoid_profile.cpp
firmware/NavigationLib/Src/Maze/: maze.cpp
firmware/NavigationLib/Src/Navigation/: search_navigator.cpp
firmware/NavigationLib/Src/Solver/: flood_fill.cpp
firmware/NavigationLib/Tests/: test_flood_fill.cpp  test_maze.cpp  test_odometry.cpp  test_trapezoid_profile.cpp
firmware/STM32_WPAN/App/: app_ble.c  app_ble.h  custom_app.c  custom_stm.c  custom_stm.h  p2p_server_app.c
firmware/cmake/stm32cubemx/: CMakeLists.txt
hardware/pcb/: .gitignore  micromouse.kicad_pcb  micromouse.kicad_pro  micromouse.kicad_sch  symbols.kicad_sym
hardware/pcb/footprints.pretty/: AMCA31-2R450G-S1F-T3.kicad_mod  ANT_2450AT42A100E.kicad_mod  CONN_BATTERY.kicad_mod  CONN_BM06B-SRSS-TB_JST.kicad_mod  DLF162500LT-5028A1.kicad_mod  DSS0012A.kicad_mod  ECS-320-8-37B-CKY-TR.kicad_mod  ICM-42670-P.kicad_mod  JLC_TOOLING_HOLE.kicad_mod  MOTOR_N20.kicad_mod  PS1240P02BT.kicad_mod  SAMTEC_FTSH-107-01-L-DV-K-A.kicad_mod  SFH4545.kicad_mod  SFH4545_FLIPPED.kicad_mod  TEFT4300.kicad_mod  TEFT4300_FLIPPED.kicad_mod  USB_C_16P_QTGM027.kicad_mod  XL7EL89CKI-111YLC-32M.kicad_mod
